--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -10,7 +10,11 @@ server {
 
     location /api/ {
         proxy_pass http://backend:8080/api/;
+        # Ensure auth header is forwarded to backend
+        proxy_set_header Authorization $http_authorization;
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
@@ -18,6 +22,8 @@ server {
     location / {
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
