--- a/shipment-track-backend/src/ShipmentTracking.Infrastructure/ShipmentTracking.Infrastructure.csproj
+++ b/shipment-track-backend/src/ShipmentTracking.Infrastructure/ShipmentTracking.Infrastructure.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="RazorLight" Version="2.3.0" />
     <PackageReference Include="Resend" Version="0.1.6" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
+    <PackageReference Include="Ulid" Version="1.3.4" />
     <PackageReference Include="EFCore.NamingConventions" Version="8.0.0" />
   </ItemGroup>
 
